--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'assets/styles/variables';
-@import '~@progress/kendo-theme-default/dist/all.scss';
+@import 'assets/styles/main';
