add event related components

--- a/src/app/modules/events/events/events.component.html
+++ b/src/app/modules/events/events/events.component.html
@@ -1,1 +1,30 @@
-<p>events works!</p>
+<div class="ev-events">
+    <div class="hero-wrapper d-flex flex-column align-center justify-center w-100">
+        <p class="header font-size-xl"><span class="font-regular">Join your hands and </span>
+            <span class="font-bold">make a better place to live</span>
+        </p>
+        <button class="k-button k-primary" (click)="host()">Host an Event</button>
+    </div>
+    <div class="events pt-50 container">
+        <div class="events-search d-flex justify-right">
+            <div class="search-wrapper">
+                <kendo-textbox class="w-100 search-input"
+                    placeholder="Search Events"  required>
+                    <ng-template kendoTextBoxPrefixTemplate>
+                        <button kendoButton look="clear" [icon]="'zoom'"></button>
+                    </ng-template>
+                </kendo-textbox>
+            </div>
+        </div>
+        <div class="event-list pt-50">
+            <div class="row">
+                <div class="col-lg-3 filter-wrapper">
+                    <app-event-filter></app-event-filter>
+                </div>
+                <div class="col-lg-9 event-list-wrapper">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
