--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,21 @@
+$white-color: #ffffff;
+$black-color: #000000;
+$primary-color: #ff7c6c;
+$secondary-color: #47bce4;
+$text-main: #2A2642;
+$bg-blue: #f4f9ff;
+
+// theme
 $light: #ffffff;
 $accent: #000000;
 
-$primary-color: #ff7c6c;
+
+// button
 $primary-button-bg: #ff7c6c;
-$primary-button-border-color: #ff7c6c;;
+$primary-button-border-color: #ff7c6c;
+
+
+// notification
+$notification-text: #ffffff;
+$notification-bg: #47bce4;
+$notification-border: #47bce4;
