--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,16 +1,19 @@
 
 @import '../../../assets/styles/variables';
-@import '~@progress/kendo-theme-default/scss/appbar/_index.scss'; 
-@import '~@progress/kendo-theme-default/scss/menu/_index.scss'; 
-@import '~@progress/kendo-theme-default/scss/button/_index.scss';
 
 .ev-header {
     .ev-appbar {
         height: 60px;
+        .logo {
+            height: 20px;
+        }
         kendo-menu {
             .k-menu {
                 .k-menu-item {
                     border-bottom: 3px solid transparent;
+                    a {
+                        color: $text-main;
+                    }
                 }
                 .k-menu-item:hover {
                     border-bottom: 3px solid $primary-color;
