--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -1,5 +1,13 @@
 @import './variables';
 @import './utils';
+@import './typography';
+
+@import '~@progress/kendo-theme-default/scss/textbox/_index.scss';
+@import '~@progress/kendo-theme-default/scss/input/_index.scss';
+@import '~@progress/kendo-theme-default/scss/notification/_index.scss';
+@import '~@progress/kendo-theme-default/scss/appbar/_index.scss'; 
+@import '~@progress/kendo-theme-default/scss/menu/_index.scss'; 
+@import '~@progress/kendo-theme-default/scss/button/_index.scss';
 
 body {
     margin: 0;
