--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -4,11 +4,17 @@
 
 @import '~@progress/kendo-theme-default/scss/textbox/_index.scss';
 @import '~@progress/kendo-theme-default/scss/input/_index.scss';
+@import '~@progress/kendo-theme-default/scss/textarea/_index.scss';
 @import '~@progress/kendo-theme-default/scss/notification/_index.scss';
 @import '~@progress/kendo-theme-default/scss/appbar/_index.scss'; 
 @import '~@progress/kendo-theme-default/scss/menu/_index.scss'; 
 @import '~@progress/kendo-theme-default/scss/button/_index.scss';
-
+@import '~@progress/kendo-theme-default/scss/dialog/_index.scss';
+@import '~@progress/kendo-theme-default/scss/dialog/_index.scss';
+@import '~@progress/kendo-theme-default/scss/stepper/_index.scss';
+@import '~@progress/kendo-theme-default/scss/dropdownlist/_index.scss';
+@import '~@progress/kendo-theme-default/scss/autocomplete/_index.scss';
+@import '~@progress/kendo-theme-default/scss/datetime/_index.scss';
 body {
     margin: 0;
 }
