--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -19,3 +19,29 @@ $primary-button-border-color: #ff7c6c;
 $notification-text: #ffffff;
 $notification-bg: #47bce4;
 $notification-border: #47bce4;
+
+// dialog
+
+$dialog-titlebar-bg: #ff7c6c;
+
+// stepper
+
+$stepper-indicator-current-text: $white-color;
+$stepper-indicator-current-bg: $secondary-color;
+$stepper-indicator-current-border: $secondary-color;
+
+$stepper-indicator-current-hover-text: $white-color;
+$stepper-indicator-current-hover-bg: $secondary-color;
+$stepper-indicator-current-hover-border: $secondary-color;
+
+$stepper-indicator-done-text: $white-color;
+$stepper-indicator-done-bg: $secondary-color;
+$stepper-indicator-done-border: $secondary-color;
+
+$stepper-progressbar-fill-bg: $secondary-color;
+
+// dropdown
+// $dropdownlist-hovered-text: $white-color;
+// $dropdownlist-bg: $primary-color;
+// $dropdownlist-border: $primary-color;
+// $dropdownlist-gradient: $primary-color;
