--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -75,6 +75,10 @@
 	cursor: pointer;
 }
 
+.cursor-normal {
+	cursor: default;
+}
+
 .invisible {
 	visibility: hidden;
 }
@@ -89,4 +93,8 @@
 
 .pt-50 {
 	padding-top: 50px;
+}
+
+.pb-50 {
+	padding-bottom: 50px;
 }
