--- a/src/app/modules/events/event-list/event-list.component.html
+++ b/src/app/modules/events/event-list/event-list.component.html
@@ -1,1 +1,41 @@
-<p>event-list works!</p>
+<div class="ev-event-list">
+    <div *ngIf="events?.length < 1" class="w-100 empty-data d-flex align-center justify-center">
+        <p class="text-uppercase font-size-medium font-semibold">No Events Found</p>
+    </div>
+    <div *ngFor="let event of events" class="pb-4">
+        <kendo-card class="event-card cursor-pointer" (click)="openDetails(event)" [width]="'100%'">
+            <div class="row">
+                <div class="col-lg-8 description">
+                    <div class="p-3">
+                        <h4>{{event?.name}}</h4>
+                        <p class="font-light truncate">{{event?.description}}</p>
+                        <div class="font-light d-flex align-center">
+                            <span class="k-icon k-i-marker-pin"></span>
+                            <p class="m-0 pl-3">{{event?.address}}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 info">
+                    <div class="p-3 d-flex flex-column">
+                        <div class="d-flex align-center pb-2">
+                            <span class="k-icon k-i-globe"></span>
+                            <p class="pl-3 m-0">{{event?.type?.type}}</p>
+                        </div>
+                        <div class="d-flex align-center pb-2">
+                            <span class="k-icon k-i-calendar"></span>
+                            <p class="pl-3 m-0">{{getDate(event?.startTime)}}</p>
+                        </div>
+                        <div class="d-flex align-center pb-2">
+                            <span class="k-icon k-i-clock"></span>
+                            <p class="pl-3 m-0">{{getTime(event?.startTime, event?.endTime)}}</p>
+                        </div>
+                        <div class="d-flex align-center pb-2">
+                            <p class="m-0 font-bold">{{event?.participants?.length}}</p>
+                            <p class="pl-3 m-0">Participant<span *ngIf="event?.participants?.length > 1">s</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </kendo-card>
+    </div>
+</div>
