--- a/src/app/modules/session/verify/verify.component.html
+++ b/src/app/modules/session/verify/verify.component.html
@@ -9,7 +9,8 @@
                 </kendo-formfield>
 
                 <div class="k-form-buttons">
-                    <button class="k-button k-primary" (click)="verify()">Verify</button>
+                    <button kendoButton class="k-button k-primary" (click)="verify()">
+                        <kendo-loader [size]="'medium'"></kendo-loader>Verify</button>
                 </div>
             </fieldset>
         </form>
