--- a/src/app/modules/events/event-details/event-details.component.html
+++ b/src/app/modules/events/event-details/event-details.component.html
@@ -3,7 +3,10 @@
         <p class="header font-size-xl font-bold">{{event?.name}}</p>
     </div>
     <div class="details-wrapper container pt-50">
-        <div class="row">
+        <!-- <div class=" d-flex align-center cursor-pointer back-link" (click)="back()">
+            <button kendoButton class="k-primary" icon="arrow-left"></button>
+        </div> -->
+        <div class="row pt-50">
             <div class="col-lg-8">
                 <h3>{{event?.name}}</h3>
                 <p class="m-0 font-size-large pt-3">
