--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -6,6 +6,7 @@ $text-main: #2A2642;
 $bg-blue: #f4f9ff;
 $grey-text: #424242;
 $light-border: #edf1f2;
+$hero-gradient: linear-gradient(90deg, hsla(7, 100%, 71%, 1) 0%, hsla(195, 74%, 59%, 1) 100%);
 
 // theme
 $light: #ffffff;
@@ -21,6 +22,7 @@ $primary-button-border-color: #ff7c6c;
 $notification-text: #ffffff;
 $notification-bg: #47bce4;
 $notification-border: #47bce4;
+$notification-font-size: 14px;
 
 // dialog
 
