--- a/src/app/modules/events/event-list/event-list.component.scss
+++ b/src/app/modules/events/event-list/event-list.component.scss
@@ -5,9 +5,9 @@
         min-height: 400px;
     }
     .event-card {
-        border: 2px solid $light-border;
-        border-left: 5px solid $primary-color;
-        box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 12%); 
+        border-radius: 5px;
+        border: 1px solid transparent;
+        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
         .row {
             .description {
 
@@ -18,7 +18,7 @@
         }
     }
     .event-card:hover {
-        border: 2px solid $primary-color;
-        border-left: 5px solid $primary-color;
+        border: 1px solid $primary-color;
+        //border-left: 5px solid $primary-color;
     }   
 }
