--- a/src/app/modules/events/events/events.component.scss
+++ b/src/app/modules/events/events/events.component.scss
@@ -2,19 +2,13 @@
 
 .ev-events {
     min-height: calc(100vh - 60px);
-    .hero-wrapper {
-        background: $bg-blue;
-        height: 150px;
-        .header {
-            color: $text-main;
-        }
-    }
     .events {
         .events-search {
             .search-wrapper {
                 width: 300px;
                 .search-input {
-                    background: $bg-blue;
+                    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);;
+                    border: none;
                 }
             }
         }
