--- a/src/app/modules/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/modules/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -1,1 +1,13 @@
-<p>carbon-footprint works!</p>
+<div class="ev-footprint">
+    <div class="hero-wrapper d-flex flex-column align-center justify-center w-100">
+        <p class="header font-size-xl font-semibold">Carbon Footprint Calculator and Monitor
+        </p>
+    </div>
+    <div class="container pt-50">
+        <div class="d-flex justify-right">
+            <button kendoButton class="k-primary" (click)="openCalculator()">Calculate Carbon Footprint</button>
+        </div>
+    </div>
+</div>
+
+<div kendoDialogContainer></div>
