add carbon footprint module

--- a/src/app/modules/carbon-footprint/calculate-carbon/calculate-carbon.component.html
+++ b/src/app/modules/carbon-footprint/calculate-carbon/calculate-carbon.component.html
@@ -12,28 +12,43 @@
                 <div *ngIf="currentStep === 2" class="mt-3">
                     <app-public-emission [publicTransportForm]="currentGroup"></app-public-emission>
                 </div>
-                <div *ngIf="currentStep === 3" class="mt-3">
-                    <div class="results pt-5">
-                        <p class="font-size-large m-0 text-center">
-                            Your total CO2 emission is
-                            <span class="font-size-xxl m-0">
-                                {{carbonEmission}}
-                            </span>
-                            metric tons
-                        </p>
-                    </div>
-                    <div class="pt-3">
-                        
-                    </div>
+                <div *ngIf="currentStep === 3" class="mt-3 results" >
+                    <ng-container [formGroup]="currentGroup">
+                        <div class="results pt-5">
+                            <p class="font-size-large m-0 text-center">
+                                Your total CO2 emission is
+                                <span class="font-size-xxl m-0">
+                                    {{carbonEmission}}
+                                </span>
+                                metric tons
+                            </p>
+                        </div>
+                        <div class="pt-3 d-flex flex-column align-center justify-center">
+                            <div class="d-flex align-center">
+                                <kendo-label [for]="month" text="Choose Month"></kendo-label>
+                                <kendo-dropdownlist class="pl-3 months-dd" [data]="months" 
+                                    [textField]="'month'" #month
+                                    [valueField]="'id'"
+                                    formControlName="month"
+                                    [itemDisabled]="itemDisabled"
+                                ></kendo-dropdownlist>
+                                <p class="m-0 pl-3">{{currentYear}}</p>
+                            </div>
+                            <button kendoButton class="k-button k-primary mt-3" (click)="addCarbon()">Add CO2 emission to your records</button>
+                        </div>
+                    </ng-container>
                 </div>
                 <span class="k-form-separator"></span>
                 <div class="k-form-buttons k-buttons-end">
                     <span class="page">Step {{ currentStep + 1 }} of 4</span>
                     <div>
                         <button class="k-button prev" *ngIf="currentStep !== 0" (click)="prev()">Previous</button>
-                        <button class="k-button k-primary" (click)="next()" *ngIf="currentStep !== 2">Next</button>
+                        <button  class="k-button k-primary" (click)="next()" *ngIf="currentStep !== 2 && currentStep !== 3">Next</button>
                         <button class="k-button k-primary" (click)="calculate()" [disabled]="!cfForm.valid" *ngIf="currentStep === 2">
-                            Calculate Carbon Footprint</button>
+                            Calculate</button>
+                    </div>
+                    <div *ngIf="currentStep == 3">
+                        <button class="k-button k-primary prev" (click)="close()">Close</button>
                     </div>
                 </div>
             </form>
