--- a/src/app/modules/carbon-footprint/calculate-carbon/calculate-carbon.component.scss
+++ b/src/app/modules/carbon-footprint/calculate-carbon/calculate-carbon.component.scss
@@ -3,6 +3,11 @@
         display: table;
         margin: auto;
         width: 450px;
+        .results {
+            .months-dd {
+                width: 100px;
+            }
+        }
     }
     .k-stepper {
         align-self: center;
