--- a/src/app/modules/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/modules/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -7,6 +7,21 @@
         <div class="d-flex justify-right">
             <button kendoButton class="k-primary" (click)="openCalculator()">Calculate Carbon Footprint</button>
         </div>
+        <div class="pt-5">
+            <div class="cf-records">
+                <p class="font-size-xl grey-text">Your Carbon Emission Records</p>
+            </div>
+            <kendo-chart class="pt-3">
+                <kendo-chart-series>
+                  <kendo-chart-series-item
+                     *ngFor="let item of emissionData"
+                      [data]="item.data" [name]="item.year"
+                      field="value" categoryField="month"
+                      type="line">
+                  </kendo-chart-series-item>
+                </kendo-chart-series>
+              </kendo-chart>
+        </div>
     </div>
 </div>
 
