update events page

--- a/src/app/modules/events/event-filter/event-filter.component.html
+++ b/src/app/modules/events/event-filter/event-filter.component.html
@@ -1,6 +1,5 @@
-<div class="ev-events-filter">
+<div class="ev-events-filter p-3">
      <div class="filters">
-        <p class="filter-header font-size-medium font-bold">Filters</p>
         <div class="pb-3" *ngFor="let filter of filters">
             <p class="font-bold font-size-medium">{{filter?.name}}</p>
             <kendo-treeview
