--- a/src/app/modules/events/create-event/create-event.component.html
+++ b/src/app/modules/events/create-event/create-event.component.html
@@ -34,24 +34,7 @@
                     </ng-container>
                 </div>
                 <div *ngIf="currentStep === 1" class="mt-3">
-                    <ng-container [formGroup]="currentGroup">
-                        <kendo-autocomplete
-                            [filterable]="true" 
-                            [data]="addressSearchResults"
-                            [placeholder]="'Event location'"
-                            class="countries"
-                            (filterChange)="search($event)"
-                            [value]="address"
-                            (valueChange)="getLocation($event)"
-                        >
-                        </kendo-autocomplete>
-                        <div class="mt-3">
-                            <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
-                                <agm-marker *ngIf="markerPresent" [latitude]="latitude" [longitude]="longitude" [markerDraggable]="false"
-                                ></agm-marker>
-                            </agm-map>
-                        </div>
-                    </ng-container>
+                    <app-address-search [addressForm]="currentGroup"></app-address-search>
                 </div>
                 <div *ngIf="currentStep === 2" class="mt-3">
                     <ng-container [formGroup]="currentGroup">
