--- a/src/app/modules/session/signup/signup.component.html
+++ b/src/app/modules/session/signup/signup.component.html
@@ -1,46 +1,61 @@
 <div class="ev-login p-5 w-100">
     <div class="d-flex flex-column justify-center align-center">
         <p class="m-0">Signup</p>
-        <form class="k-form" [formGroup]="signupForm">
-            <fieldset class="k-form-fieldset">
-                <div class="wrap">
-                    <kendo-formfield>
-                        <kendo-label [for]="firstName" text="First Name"></kendo-label>
-                        <kendo-textbox class="w-100" formControlName="firstName" #firstName required></kendo-textbox>
-                    </kendo-formfield>
-                    <kendo-formfield>
-                        <kendo-label [for]="lastName" text="Last Name"></kendo-label>
-                        <kendo-textbox class="w-100" formControlName="lastName" #lastName required></kendo-textbox>
-                    </kendo-formfield>
-                </div>
-                <kendo-formfield>
-                    <kendo-label [for]="userName" text="User Name"></kendo-label>
-                    <kendo-textbox class="w-100" formControlName="userName" #userName required></kendo-textbox>
-                </kendo-formfield>
-                <kendo-formfield>
-                    <kendo-label [for]="email" text="Email"></kendo-label>
-                    <kendo-textbox class="w-100" formControlName="email" #email required></kendo-textbox>
-                </kendo-formfield>
-                <kendo-formfield>
-                    <kendo-label [for]="phoneNumber" text="Phone Number"></kendo-label>
-                    <kendo-textbox class="w-100" formControlName="phoneNumber" #phoneNumber required></kendo-textbox>
-                </kendo-formfield>
-                <kendo-formfield>
-                    <kendo-label [for]="password" text="Password"> </kendo-label>
-                    <kendo-textbox class="w-100" formControlName="password" #password required [clearButton]="true">
-                        <ng-template kendoTextBoxSuffixTemplate>
-                            <button kendoButton look="clear" icon="eye" (click)="toggleVisibility()"></button>
-                        </ng-template>
-                    </kendo-textbox>
-                </kendo-formfield>
-
-                <div class="k-form-buttons">
-                    <button class="k-button k-primary" (click)="signup()">
-                        <kendo-loader *ngIf="isLoading" [size]="'small'"></kendo-loader>
-                        Signup</button>
-                </div>
-            </fieldset>
-        </form>
+        <div class="form-wrapper d-flex justify-center w-100">
+            <div class="stepper-wrapper w-100">
+                <kendo-stepper #stepper [steps]="steps" stepType="full" [(currentStep)]="currentStep"> </kendo-stepper>
+                <form class="k-form" [formGroup]="signupForm">
+                    <div *ngIf="currentStep === 0" >
+                        <ng-container [formGroup]="currentGroup">
+                            <div class="wrap">
+                                <kendo-formfield>
+                                    <kendo-label [for]="firstName" text="First Name"></kendo-label>
+                                    <kendo-textbox class="w-100" formControlName="firstName" #firstName required></kendo-textbox>
+                                </kendo-formfield>
+                                <kendo-formfield>
+                                    <kendo-label [for]="lastName" text="Last Name"></kendo-label>
+                                    <kendo-textbox class="w-100" formControlName="lastName" #lastName required></kendo-textbox>
+                                </kendo-formfield>
+                            </div>
+                            <kendo-formfield>
+                                <kendo-label [for]="userName" text="User Name"></kendo-label>
+                                <kendo-textbox class="w-100" formControlName="userName" #userName required></kendo-textbox>
+                            </kendo-formfield>
+                            <kendo-formfield>
+                                <kendo-label [for]="email" text="Email"></kendo-label>
+                                <kendo-textbox class="w-100" formControlName="email" #email required></kendo-textbox>
+                            </kendo-formfield>
+                            <kendo-formfield>
+                                <kendo-label [for]="phoneNumber" text="Phone Number"></kendo-label>
+                                <kendo-textbox class="w-100" formControlName="phoneNumber" #phoneNumber required></kendo-textbox>
+                            </kendo-formfield>
+                            <kendo-formfield>
+                                <kendo-label [for]="password" text="Password"> </kendo-label>
+                                <kendo-textbox class="w-100" formControlName="password" #password required [clearButton]="true">
+                                    <ng-template kendoTextBoxSuffixTemplate>
+                                        <button kendoButton look="clear" icon="eye" (click)="toggleVisibility()"></button>
+                                    </ng-template>
+                                </kendo-textbox>
+                            </kendo-formfield>
+                        </ng-container>
+                    </div>
+                    <div *ngIf="currentStep === 1" class="mt-3">
+                        <app-address-search [addressForm]="currentGroup"></app-address-search>
+                    </div>
+                    <span class="k-form-separator"></span>
+                    <div class="k-form-buttons d-flex justify-between">
+                        <span class="page">Step {{ currentStep + 1 }} of 2</span>
+                        <div>
+                            <button class="k-button prev" *ngIf="currentStep !== 0" (click)="prev()">Previous</button>
+                            <button class="k-button k-primary" (click)="next()" *ngIf="currentStep !== 1">Next</button>
+                            <button class="k-button k-primary" (click)="signup()" *ngIf="currentStep == 1">
+                            <kendo-loader *ngIf="isLoading" [size]="'small'"></kendo-loader>
+                                Signup</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
         <p>Already have an account? 
             <span><a href="account/login">Login</a></span>
         </p>
