--- a/src/app/modules/events/events/events.component.html
+++ b/src/app/modules/events/events/events.component.html
@@ -1,4 +1,4 @@
-<div class="ev-events">
+<div class="ev-events pb-50">
     <div class="hero-wrapper d-flex flex-column align-center justify-center w-100">
         <p class="header font-size-xl"><span class="font-regular">Join your hands and </span>
             <span class="font-bold">make a better place to live</span>
@@ -9,7 +9,10 @@
         <div class="event-list pt-50">
             <div class="event-list-wrapper">
                 <div class="events-search d-flex justify-between pb-50">
-                    <div class="d-flex align-center">
+                    <div class="d-flex align-center justify-between w-100">
+                        <div>
+                            <p class="font-size-large font-semibold grey-text m-0" *ngIf="count>0"> {{count}} Events found</p>
+                        </div>
                         <div class="search-wrapper">
                             <kendo-textbox class="w-100 search-input" [(ngModel)]="searchKey"
                                 placeholder="Search Events"  required (keyup.enter)="search()">
@@ -19,11 +22,11 @@
                             </kendo-textbox>
                         </div>
                     </div> 
-                    <div class="d-flex align-center">
+                    <!-- <div class="d-flex align-center">
                         <kendo-dropdownlist class="" [data]="sort" [(ngModel)]="selectedSort"
                         textField="text" valueField="value"
                         required></kendo-dropdownlist>
-                    </div>
+                    </div> -->
                 </div>
                 <app-event-list [events]="events"></app-event-list>
             </div>
